--- a/server/public/styles/main.css
+++ b/server/public/styles/main.css
@@ -36,7 +36,7 @@ body {
 
 /* Details list on book currently being read */
 .current-book-details {
-  font-size: 20px;
+  font-size: 18px;
 }
 
 /*vertically aligns site title in header*/
@@ -272,6 +272,10 @@ main {
   color: rgb(221,219,241);
   border-color: white;
   border-radius: 0;
+}
+
+.on-nightstand {
+  background-color: rgb(51,32,42);
 }
 
 .book-details ul {
