added google popup into recommendBook Controller

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="scripts/services/user.factory.js"></script>
     <!-- for Google Book Embedded Preview -->
     <script type="text/javascript" src="https://www.google.com/books/jsapi.js"></script>
+    <script type="text/javascript" src="//books.google.com/books/previewlib.js"></script>
     <link rel="stylesheet" href="/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/main.css">
   </head>
