--- a/server/public/views/templates/recommend.html
+++ b/server/public/views/templates/recommend.html
@@ -1,5 +1,5 @@
 <div class="recommend-book-selection-options" ng-show="rb.books">
-  <h3>Because you have read books by {{rb.becauseYouRead}}</h3>
+  <h3>Other books by {{rb.becauseYouRead}}</h3>
   <div class="books-to-repeat" ng-repeat="books in rb.books track by $index">
     <img ng-src="{{books.volumeInfo.imageLinks.thumbnail}}" />
     <ul class="recommend-book-selection-list" >
