--- a/server/public/views/templates/book-shelf.html
+++ b/server/public/views/templates/book-shelf.html
@@ -3,6 +3,13 @@
 
   <p>You have read {{bs.totalRead}} books so far this year.</p>
 
+  <div class="book-shelf-progress">
+    <h3>Progress</h3>
+    <div class="row">
+        <div class="col-md-12"><uib-progressbar ng-max="52" value="bs.totalRead" type="style"><i>{{bs.totalRead}} / 52</i></uib-progressbar></div>
+    </div>
+  </div>
+
   <div>
 
     <script type="text/ng-template" id="group-template.html">
