--- a/server/public/views/templates/night-stand.html
+++ b/server/public/views/templates/night-stand.html
@@ -2,7 +2,7 @@
   <div class="night-stand-header">
     <h1>Night Stand</h1>
 
-    <div>
+    <div ng-show="ns.noCurrentBook">
 
         <button type="button" class="btn btn-default add-book-button" ng-click="ns.openAddBook('lg')">Add A New Book</button>
         <p>Need a recommendation? <a href="#recommend">Click here.</a>
@@ -12,7 +12,7 @@
 
 
   <div class="night-stand-book-info">
-    <h3 class="text-center">Currently Reading</h3>
+    <!-- <h3 class="text-center">Currently Reading</h3> -->
     <!-- Alerts Container -->
     <div>
       <div uib-alert ng-repeat="alert in ns.alerts track by $index" ng-class="'alert-' + (alert.type || 'warning')" close="ns.closeAlert($index)">{{alert.msg}}</div>
