--- a/server/public/views/templates/book-shelf.html
+++ b/server/public/views/templates/book-shelf.html
@@ -1,9 +1,10 @@
 <div class="book-shelf-main">
-  <h1>Book Shelf</h1>
 
-  <p>You have read {{bs.totalRead}} books so far this year.</p>
+
+  <!-- <p>You have read {{bs.totalRead}} books so far this year.</p> -->
 
   <div class="book-shelf-progress">
+    <h1>Book Shelf</h1>
     <h3>Progress</h3>
     <div class="row">
         <div class="col-md-12"><uib-progressbar ng-max="52" value="bs.totalRead" type="style"><i>{{bs.totalRead}} / 52</i></uib-progressbar></div>
