preview button in recommended page bringing user to preview in new tab

--- a/server/public/views/templates/preview-book-modal.html
+++ b/server/public/views/templates/preview-book-modal.html
@@ -1,2 +1,14 @@
-<div id="viewerCanvas" style="width: 300px; height: 500px"></div>
+<!-- <div id="viewerCanvas" style="width: 600px; height: 500px"></div>
 <button>Close</button>
+
+
+<script type="text/javascript">
+  google.books.load();
+
+  function initialize() {
+    var viewer = new google.books.DefaultViewer(document.getElementById('viewerCanvas'));
+    viewer.load('ISBN:0738531367');
+  }
+
+  google.books.setOnLoadCallback(initialize);
+</script> -->
