progress bar color change

--- a/server/public/styles/main.css
+++ b/server/public/styles/main.css
@@ -190,8 +190,8 @@ main {
 }
 
 .progress-bar-style {
-  background-color: rgb(221,219,241);
-  color: rgb(56,63,81);
+  background-color: rgb(60,122,137);
+  color: white;
   font-weight: bold;
 }
 
