--- a/server/public/views/templates/book-shelf.html
+++ b/server/public/views/templates/book-shelf.html
@@ -5,7 +5,7 @@
 
   <div class="book-shelf-progress">
     <h1>Book Shelf</h1>
-    <h3>Progress</h3>
+    <h3>Progress Towards Yearly Goal</h3>
     <div class="row">
         <div class="col-md-12"><uib-progressbar ng-max="52" value="bs.totalRead" type="style"><i>{{bs.totalRead}} / 52</i></uib-progressbar></div>
     </div>
