--- a/server/public/views/templates/night-stand.html
+++ b/server/public/views/templates/night-stand.html
@@ -9,7 +9,7 @@
         <button type="button" class="btn btn-default add-book-button" ng-click="ns.openAddBook('lg')">Add A New Book</button>
         <p>Need a recommendation? <a href="#recommend">Click here.</a>
         <div class="no_current_book" ng-show="ns.noCurrentBook">
-          <h4>You currently do not have a book on your Night Stand. Click Add a New book to add your next book.</h4>
+          <h4>You currently do not have a book on your Night Stand. Click Add a New book to get started on your next book.</h4>
         </div>
     </div>
   </div>
