--- a/server/public/views/templates/book-shelf.html
+++ b/server/public/views/templates/book-shelf.html
@@ -11,7 +11,7 @@
     </div>
   </div>
 
-  <div>
+  <div class="book-shelf-accordion-container">
 
     <script type="text/ng-template" id="group-template.html">
       <div class="panel panel-default">
